fix quicklinks scroll / test webkit option mobile viewport

--- a/src/assets/styles/desktop/_crt.scss
+++ b/src/assets/styles/desktop/_crt.scss
@@ -8,7 +8,7 @@ $screen-background:#121010;
 .computer-frame {
   width: 100vw;
   height: calc(var(--vh, 1vh) * 100);
-  height: 100vh;
+  height: -webkit-fill-available;
   max-width: 1200px;
   // max-height: 1800px;
   margin: 0 auto;
